<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优店管家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phonenum">手机号</string>
    <string name="password">密码</string>
    <string name="regist">注册</string>
    <string name="findpassword">找回密码</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_resgister">注册</string>
    <string name="send_yanzhenma">发送验证码</string>
    <string name="input_yanghznegma">输入验证码</string>
    <string name="set_password">设置密码</string>
    <string name="confir_password">确认密码</string>
    <string name="up_head">上传头像</string>
    <string name="name">姓名</string>
    <string name="mydate">出生日期</string>
    <string name="ponit_sec">点击选择 </string>
    <string name="comple_info">完善信息</string>
    <string name="day_past">日流水</string>
    <string name="moving">动态</string>
    <string name="mydata">数据</string>
    <string name="quanzi">圈子</string>
    <string name="more">更多</string>
    <string name="month_task">月任务</string>
	 <string name="toals_sales_cash">累计销售金额</string>
    <string name="toals_sales_num">累计销售件数</string>
    <string name="in_store_person_count">进店人数</string>
    <string name="try_cloth_count">试衣人数</string>
    <string name="comple_count">成交单数</string>
    <string name="num0">1234</string>
    <string name="renxiao">人效</string>
    <string name="try_per">试衣率</string>
    <string name="buy_per">购买率</string>
    <string name="man">男</string>
    <string name="sex">性别</string>
    <string name="my_staff">我的员工</string>
    <string name="my_shop">我的商户</string>
    <string name="contacts">通讯录</string>
    <string name="yaoqing">邀请</string>
    <string name="search_hint">输入条件</string>
    <string name="app_label">搜索</string>
    <string name="feed_back">意见反馈</string>
    <string name="feek_back_hint">哪里不足，评价一下!</string>
    <string name="feed_back_mail_hint">输入联系邮箱</string>
    <string name="modify_nicheng">修改昵称</string>
    <string name="input_nicheng_hint">输入您的昵称</string>
    <string name="data_count">数据统计</string>
    <string name="recent">最近</string>
    <string name="benyue">本月</string>
</resources>
