<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/feed_back_title_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/actionbar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/feed_back"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/feed_back_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back" />

    </RelativeLayout>

    <EditText
        android:id="@+id/feed_back_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_back_title_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/feek_back_hint" />

    <EditText
        android:id="@+id/feed_back_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_back_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:hint="@string/feed_back_mail_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/feed_back_commit_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/feed_back_email"
        android:layout_below="@+id/feed_back_email"
        android:layout_marginTop="64dp"
        android:src="@drawable/feed_back_commit_sec" 
        android:clickable="true"/>

</RelativeLayout>
