<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/comple_title_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/actionbar" >

        <TextView
            android:id="@+id/home_day_past_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/comple_info"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comple_up_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/comple_title_layout"
        android:background="@drawable/comple_bg" >

        <ImageView
            android:id="@+id/comple_up_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/head_img_sec" />

        <TextView
            android:id="@+id/comple_up_head_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/comple_up_img"
            android:text="@string/up_head"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comple_name_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/comple_up_layout"
        android:background="@drawable/input_box" >

        <ImageView
            android:id="@+id/comple_name_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/comple_name" />

        <TextView
            android:id="@+id/comple_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/comple_name_img"
            android:text="@string/name" />

        <EditText
            android:id="@+id/comple_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/input_box"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comple_mydate_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/comple_name_layout"
        android:background="@drawable/input_box" >

        <ImageView
            android:id="@+id/comple_mydate_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/comple_date" />

        <TextView
            android:id="@+id/comple_mydate_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/comple_mydate_img"
            android:text="@string/mydate" />

        <TextView
            android:id="@+id/comple_danji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/comple_mydate_txt"
            android:layout_alignBottom="@+id/comple_mydate_txt"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:text="@string/ponit_sec" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/comple_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/comple_mydate_layout"
        android:background="@drawable/input_box" >

        <ImageView
            android:id="@+id/comple_phone_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/comple_phone" />

        <TextView
            android:id="@+id/comple_phone_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/comple_phone_img"
            android:text="@string/phonenum" />

        <EditText
            android:id="@+id/comple_phone_edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBaseline="@+id/comple_phone_txt"
            android:layout_alignBottom="@+id/comple_phone_txt"
            android:layout_alignParentRight="true"
            android:background="@drawable/input_box"
            android:ems="10" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/comple_done_imbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comple_phone_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:background="@drawable/comple_a_sec" />

</RelativeLayout>
