<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/home_bel_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/home_tab_bg" >

        <RelativeLayout
            android:id="@+id/home_day_past_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/home_day_past_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/day_past" />

            <TextView
                android:id="@+id/home_day_past_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_day_past_img"
                android:layout_centerHorizontal="true"
                android:text="@string/day_past"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_moving_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/home_moving_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/moving" />

            <TextView
                android:id="@+id/home_moving_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_moving_img"
                android:layout_centerHorizontal="true"
                android:text="@string/moving"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_data_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/home_data_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/date_img" />

            <TextView
                android:id="@+id/home_data_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_data_img"
                android:layout_centerHorizontal="true"
                android:text="@string/mydata"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_quanzi_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/home_quanzi_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/quanzi_img" />

            <TextView
                android:id="@+id/home_quanzi_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_quanzi_img"
                android:layout_centerHorizontal="true"
                android:text="@string/quanzi"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/home_more_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/home_more_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/more_img" />

            <TextView
                android:id="@+id/home_more_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_more_img"
                android:layout_centerHorizontal="true"
                android:text="@string/more"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/home_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/home_bel_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

    </FrameLayout>

</RelativeLayout>