<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/data_bg" >

    <RelativeLayout
        android:id="@+id/data_count_title_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/actionbar" >

        <ImageView
            android:id="@+id/data_count_search_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/data_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/data_count"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/data_count_pen_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/data_pen" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/data_count_tablayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/data_count_title_layout"
        android:background="@drawable/comple_bg" >

        <RelativeLayout
            android:id="@+id/data_count_shop_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:layout_weight="1">

            <Spinner
                android:id="@+id/data_count_spinner"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" 
                android:background="@color/transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/data_count_recent_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:layout_weight="1">

            <TextView
                android:id="@+id/data_count_recent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/recent"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/data_count_benyue_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:layout_weight="1">

            <TextView
                android:id="@+id/data_count_benyue_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/benyue"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>

      <android.support.v4.view.ViewPager
          android:id="@+id/data_view_pager"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/data_count_tablayout"
          android:layout_gravity="center"
          android:flipInterval="30"
          android:persistentDrawingCache="animation" >
        </android.support.v4.view.ViewPager>
    
    
</RelativeLayout>